--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
 
 <body>
   <div class="main">
-    <img draggable="false" class="logo" src="./recursos/Nexialogo.png" alt="logo">
+    <img draggable="false" class="logo" src="./Logo_Nexia_ok.png" alt="logo">
     <h1>Bienvenid@ <span class="creative">¿Qué tarea desea realizar?</span> <br /></h1>
 
 
     <div class="image-row">
         <div class="image-container">
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener noreferer" title="Aplicación">
-                <img draggable="false" src="./recursos/Soporte y atc.png" alt="Logo jira">
+                <img draggable="false" src="./Soporte y atc.png" alt="Logo jira">
                 <p class="texto">Tickets de soporte y servicio posventa</p>
             </div>
         </a>
         <div class="image-container">
         <a href="https://lab.kunturnet.com/fibermanager/" target="_blank" rel="noopener noreferer" title="Aplicación">
-          <img draggable="false" src="./recursos/provisionamiento.png" alt="Logo kuntur">
+          <img draggable="false" src="./provisionamiento.png" alt="Logo kuntur">
           <p class="texto">Servicio de provisionamiento</p>
         </div>
         </a>
         <div class="image-container">
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener noreferer" title="Aplicación"> 
-            <img draggable="false" src="./recursos/OT.png" alt="Logo Sytex">
+            <img draggable="false" src="./OT.png" alt="Logo Sytex">
                 <p class="texto">revisar o generar ordenes de trabajo</p>
             </div>
         </a>
